SERVER-20708 make getMore and killCursors commands ignore the slaveOk bit

These commands will now succeed on secondaries even if slaveOk=0.