src/mongo/s/commands/cluster_getmore_cmd.cpp
@@ -55,10 +55,6 @@ public:
     }
 
     bool slaveOk() const final {
-        return false;
-    }
-
-    bool slaveOverrideOk() const final {
         return true;
     }
 
